--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>web aurel</title>
+        <title>Home - Website</title>
     </head>
     <body>
-        <h1>Ini adalah web untuk eskul<h2>
-            <p>Hallo,ini web pertama saya</br>Saya peserta ekskul coding
-            </p>Saya belajar HTML, CSS dan Javascript</p>
+       <header>
+           <nav class="navbar">
+               <ul>
+                   <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="#" class="active">Profile</a></li>
+                    <li><a href="#" class="active">Contact</a></li>
+                    <li><a href="#" class="active">Latihan</a></li>
+               </ul>
+           </nav>
+       </header>
+
+            <main>
+                <section class="Home">
+                    <h1>Selamat Datang</h1>
+                    <p>Ini adalah halaman Home</p>
+                </section>
+            </main>
+
+        <footer>
+            <p>&copy; 2025 My website. All right reserved</p>
+        </footer>
     </body>
+
 </html>
