--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
         <footer>
             <p>&copy; 2025 My website. All right reserved</p>
+    </body>
+</html>
         </footer>
     </body>
 
 </html>
+
