--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Home - Website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
        <header>
@@ -29,5 +30,6 @@
         </footer>
     </body>
 </html>
+
 
 
